# map-simple-renderer

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: pack.cmake
renderer/: CMakeLists.txt  version.hpp.in
renderer/src/: bounded_buffer.hpp  main.cpp
server/: CMakeLists.txt
server/src/: main.cpp
server/websrc/: index.html
